--- a/.github/workflows/maven-site-integration.yml
+++ b/.github/workflows/maven-site-integration.yml
@@ -142,3 +142,30 @@ jobs:
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Log in to container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io                 
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+
+      - name: Build & push Frontend image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./frontend               
+          file: ./frontend/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/tu-org/frontend:latest
+            ghcr.io/tu-org/frontend:${{ github.sha }}
+
+      - name: Build & push Backend image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./backend                
+          file: ./backend/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/tu-org/backend:latest
+            ghcr.io/tu-org/backend:${{ github.sha }}
