--- a/.github/workflows/maven-site-integration.yml
+++ b/.github/workflows/maven-site-integration.yml
@@ -143,13 +143,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Log in to container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io                 
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-
       - name: Build & push Frontend image
         uses: docker/build-push-action@v3
         with:
@@ -159,6 +152,7 @@ jobs:
           tags: |
             ghcr.io/tu-org/frontend:latest
             ghcr.io/tu-org/frontend:${{ github.sha }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & push Backend image
         uses: docker/build-push-action@v3
@@ -169,3 +163,4 @@ jobs:
           tags: |
             ghcr.io/tu-org/backend:latest
             ghcr.io/tu-org/backend:${{ github.sha }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
